add header block elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,3 +9,19 @@
 
   </body>
 <html>
+<!DOCTOTYPE html>
+<html>
+  <head>
+    <title>My first webpage!</title>
+  </head>
+  <body>
+    <h1>My Firsr Webpage</h1>
+    <h2>Written with a little guidance from Moringa School<h2>
+
+      
+    <p>Hello, world!</p>
+    <p>Welcome to my first webpage!</p>
+    <p>I like playing videogames!</p>
+    <p>Eating!</p>
+  </body>
+</html>
