--- a/index.html
+++ b/index.html
@@ -1,27 +1,18 @@
-<html>
-</html>
 <!DOCTYPE html>
 <html>
   <head>
     <title>My first webpage!title>
-  <head>
-  <body>
-
-  </body>
-<html>
-<!DOCTOTYPE html>
-<html>
+    <title>My first webpage!</title>
   <head>
     <title>My first webpage!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>My Firsr Webpage</h1>
+    <h1>My First Webpage</h1>
     <h2>Written with a little guidance from <em>Moringa School</em></h2>
-
 
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
-
     <p>Here are some things I'm going to learn about coding:</p>
     <ol>
       <li>HTML</li>
@@ -31,6 +22,7 @@
 
     </ol>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
-    <img src="images/elephant.jpg" alt="A photo of an elephant"
+    <img src="images/elephant.jpeg" alt="A photo of an elephant">
+    <p>Here is a link to my <a href="my-favourite-things.html">favourite things</a></p>
   </body>
 </html>
